--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,11 @@ add_executable(GridEngine GridEngine/main.cpp
         GridEngine/Renderer/GEWindow.cpp
         GridEngine/Renderer/GEWindow.h
         GridEngine/FirstApp.cpp
-        GridEngine/FirstApp.h)
+        GridEngine/FirstApp.h
+        GridEngine/FirstApp.cpp
+        GridEngine/Renderer/GEPipeline.cpp
+        GridEngine/Renderer/GEPipeline.h
+)
 
 # Link the Vulkan and GLFW libraries, along with other dependencies
 target_link_libraries(GridEngine PRIVATE Vulkan::Vulkan glfw dl pthread X11 Xxf86vm Xrandr Xi)
