--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(GridEngine GridEngine/main.cpp
         GridEngine/Renderer/GEPipeline.cpp
         GridEngine/Renderer/GEPipeline.h
         GridEngine/Renderer/GEDevice.cpp
+        GridEngine/Renderer/GEDevice.h
 )
 
 # Link the Vulkan and GLFW libraries, along with other dependencies
