added github build check

--- a/.github/workflows/CMakeBuild.yml
+++ b/.github/workflows/CMakeBuild.yml
@@ -29,6 +29,8 @@ jobs:
       # Install dependencies
       - name: Install Dependencies
         run: sudo apt-get install -y cmake g++
+        continue-on-error: true  # Retry or prevent the job from failing on this step
+
 
       # Configure CMake project
       - name: CMake Configure
