--- a/.github/workflows/CMakeBuild.yml
+++ b/.github/workflows/CMakeBuild.yml
@@ -1,4 +1,75 @@
-name: Vulkan Build Pipeline
+#name: Vulkan Build Pipeline
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      # Checkout the repository
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      # Set up Vulkan SDK (using Ubuntu packages)
+#      - name: Install Vulkan SDK
+#        run: |
+#          sudo apt update
+#          sudo apt install -y libvulkan-dev vulkan-tools vulkan-validationlayers-dev
+#
+#      # Optional: If you need specific Vulkan SDK version, download it
+#      - name: Download Vulkan SDK
+#        run: |
+#          wget https://sdk.lunarg.com/sdk/download/latest/linux/vulkan-sdk.tar.gz
+#          tar -xvzf vulkan-sdk.tar.gz
+#          export VULKAN_SDK=$PWD/1.3.261.1/x86_64
+#
+#      # Export Vulkan SDK path
+#      - name: Set Vulkan environment variables
+#        run: |
+#          echo "VULKAN_SDK=$VULKAN_SDK" >> $GITHUB_ENV
+#          echo "PATH=$VULKAN_SDK/bin:$PATH" >> $GITHUB_ENV
+#          echo "LD_LIBRARY_PATH=$VULKAN_SDK/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+#
+#      # Ensure paths are correctly set and no invalid format issues
+#      - name: Check Vulkan SDK environment variables
+#        run: |
+#          echo "Vulkan SDK path: $VULKAN_SDK"
+#          vulkaninfo  # Run a basic Vulkan info check
+#
+#      # Install other build dependencies (adjust as needed)
+#      - name: Install build dependencies
+#        run: |
+#          sudo apt install -y build-essential cmake
+#
+#      # Run the build command
+#      - name: Build the project
+#        run: |
+#          mkdir build
+#          cd build
+#          cmake ..
+#          make
+#
+#      # Run unit tests (if applicable)
+#      - name: Run tests
+#        run: |
+#          cd build
+#          ctest
+#
+#      # Optional: Upload build artifacts
+#      - name: Upload build artifacts
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: build-artifacts
+#          path: build/
+#
+name: C++ Vulkan CI
 
 on:
   push:
@@ -13,58 +84,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
+      # Checkout the project
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Vulkan SDK (using Ubuntu packages)
-      - name: Install Vulkan SDK
+      # Install dependencies (CMake, Vulkan SDK, GCC/Clang)
+      - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y libvulkan-dev vulkan-tools vulkan-validationlayers-dev
+          sudo apt-get update
+          sudo apt-get install -y cmake gcc g++ vulkan-sdk libvulkan-dev
 
-      # Optional: If you need specific Vulkan SDK version, download it
-      - name: Download Vulkan SDK
-        run: |
-          wget https://sdk.lunarg.com/sdk/download/latest/linux/vulkan-sdk.tar.gz
-          tar -xvzf vulkan-sdk.tar.gz
-          export VULKAN_SDK=$PWD/1.3.261.1/x86_64
+      # Set up CMake and build the project
+      - name: Configure CMake
+        run: cmake -S . -B build
 
-      # Export Vulkan SDK path
-      - name: Set Vulkan environment variables
-        run: |
-          echo "VULKAN_SDK=$VULKAN_SDK" >> $GITHUB_ENV
-          echo "PATH=$VULKAN_SDK/bin:$PATH" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=$VULKAN_SDK/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+      - name: Build project
+        run: cmake --build build
 
-      # Ensure paths are correctly set and no invalid format issues
-      - name: Check Vulkan SDK environment variables
-        run: |
-          echo "Vulkan SDK path: $VULKAN_SDK"
-          vulkaninfo  # Run a basic Vulkan info check
-
-      # Install other build dependencies (adjust as needed)
-      - name: Install build dependencies
-        run: |
-          sudo apt install -y build-essential cmake
-
-      # Run the build command
-      - name: Build the project
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          make
-
-      # Run unit tests (if applicable)
+      # (Optional) Run tests if available
       - name: Run tests
-        run: |
-          cd build
-          ctest
+        run: cd build && ctest
 
-      # Optional: Upload build artifacts
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: build/
+      # (Optional) Clean build directory after completion
+      - name: Clean build
+        run: cmake --build build --target clean
