--- a/.github/workflows/CMakeBuild.yml
+++ b/.github/workflows/CMakeBuild.yml
@@ -90,12 +90,20 @@ jobs:
 
       # Install dependencies (CMake, Vulkan SDK, GCC/Clang)
       - name: Install dependencies
-        run: |        
-          # Download and install the Vulkan SDK from LunarG
-          wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake gcc g++ libvulkan-dev vulkan-utils
+          
+          # Download the Vulkan SDK signing key and add it to the system keyring
+          curl -fsSL https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc > /dev/null
+          
+          # Add the Vulkan SDK repository to the sources list
           sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list https://packages.lunarg.com/vulkan/1.3.261/jammy/lunarg-vulkan-jammy.list
+          
+          # Update package list and install Vulkan SDK
           sudo apt-get update
           sudo apt-get install -y vulkan-sdk
+
 
       # Set up CMake and build the project
       - name: Configure CMake
